--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,3 +19,17 @@ jobs:
 
       - name: Build app
         run: ./scripts/buildprod.sh
+
+      - id: auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: Set up Cloud SDK
+        uses: 'google-github-actions/setup-gcloud@v3'
+
+      - name: Use gcloud CLI
+        run: 'gcloud info'
+
+      - name: Build Docker
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/abiding-ion-483317-v1/notely-ar-repo/alexcandev/notely:latest .
